[package]
name = "tenebra-stake"
version = "1.0.0"
edition = "2021"
authors = ["Erb3"]
description = "A stake node for the cryptocurrency tenebra"
documentation = "https://github.com/Erb3/TenebraStake"
readme = "README.md"
homepage = "https://github.com/Erb3/TenebraStake"
repository = "https://github.com/Erb3/TenebraStake"
license = "MPL-2"
keywords = ["tenebra", "tenebrastake", "stakenode"]
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.3.19", features = ["derive", "env"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
reqwest = { version="0.11.18", features=["blocking", "json"] }
serde = { version = "1.0.180", features=["derive"] }
serde_json = "1.0.104"
tungstenite = { version = "0.20.0", features = ["native-tls"] }
ctrlc = "3.4.0"
rand = "0.8.5"
base64 = "0.21.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = 1