[package]
name = "tenebra-stake"
version = "1.0.0"
edition = "2021"
authors = ["Erb3"]
description = "A stake node for the cryptocurrency tenebra"
documentation = "https://github.com/Erb3/TenebraStake"
readme = "README.md"
homepage = "https://github.com/Erb3/TenebraStake"
repository = "https://github.com/Erb3/TenebraStake"
license = "MPL-2"
keywords = ["tenebra", "tenebrastake", "stakenode"]
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.4.3", features = ["derive", "env"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
reqwest = { version="0.11.18", default-features = false, features=["json", "native-tls"] }
serde = { version = "1.0.180", features=["derive"] }
serde_json = "1.0.104"
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
tokio = {version = "1.29.1", features = ["full"]}
futures-util = {version = "0.3.28"}
futures-channel = {version = "0.3.28"}

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = 1
