[package]
name = "tenebra-stake"
version = "1.0.1"
edition = "2021"
authors = ["Erb3"]
description = "A stake node for the cryptocurrency tenebra"
documentation = "https://github.com/Erb3/TenebraStake"
readme = "README.md"
homepage = "https://github.com/Erb3/TenebraStake"
repository = "https://github.com/Erb3/TenebraStake"
license = "MPL-2"
keywords = ["tenebra", "tenebrastake", "stakenode"]
categories = ["web-programming::websocket", "cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.5.16", features = ["derive", "env"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version="0.12.7", default-features = false, features=["json", "native-tls"] }
serde = { version = "1.0.208", features=["derive"] }
serde_json = "1.0.125"
tokio-tungstenite = {version = "0.23.1", features = ["native-tls", "url"]}
tokio = {version = "1.39.3", features = ["full"]}
futures-util = {version = "0.3.30"}
futures-channel = {version = "0.3.30"}

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = 1
